@@ -1,3 +1,8 @@
+2015-02-26  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* arc-init.sh (temp_file_in_dir): New function.
+	* build-uclibc.sh: Use temp_file_in_dir instead of mktemp.
+
 2015-02-24  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* build-uclibc.sh: Switch on UCLIBC_HAS_THREADS_NATIVE and turn
